--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
