--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.0",
     "mongoose": "^6.8.0",
